--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: lightblue;
+    background-color: #192D3C;
 }
 
 .container {
@@ -17,6 +17,7 @@ body {
 .title {
     text-align: center;
     padding: 50px 0;
+    color: white;
 }
 
 .content-card {
@@ -28,8 +29,13 @@ body {
 .card {
     width: calc(100% / 4 - 30px);
     margin: 15px;
-    border:1px solid black;
+    background-color: lightblue;
+    border-radius: 10px;
 }
 .card img {
     width: 100%;
+}
+
+.fa-star {
+    color: gold;
 }
